--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="https://kit.fontawesome.com/3b5a190dc6.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
